--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "mongoose"        : "~3.8.13",
     "morgan"          : "~1.1.1",
     "body-parser"     : "~1.4.3",
-    "method-override" : "~2.1.1"
+    "method-override" : "~2.1.1",
+    "nodemon"         : "~1.2.1"
+  },
+  "scripts" : {
+    "start"      : "nodemon server.js"
   }
 }
